stack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: stack
  name: stack
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stack
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/web: "true"
        io.kompose.service: stack
    spec:
      containers:
        - args:
            - start
          command:
            - ttn-lw-stack
          image: thethingsnetwork/lorawan-stack:3.10
          name: stack
          ports:
            - containerPort: 1885
            - containerPort: 8885
            - containerPort: 1882
            - containerPort: 8882
            - containerPort: 1883
            - containerPort: 8883
            - containerPort: 1884
            - containerPort: 8884
            - containerPort: 1887
            - containerPort: 8887
            - containerPort: 1700
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/cert.pem
              name: cert.pem
            - mountPath: /run/secrets/key.pem
              name: key.pem
            - mountPath: /srv/ttn-lorawan/public/blob
              name: stack-claim0
      restartPolicy: Always
      volumes:
        - name: cert.pem
          secret:
            items:
              - key: cert.pem
                path: cert.pem
            secretName: cert.pem
        - name: key.pem
          secret:
            items:
              - key: key.pem
                path: key.pem
            secretName: key.pem
        - name: stack-claim0
          persistentVolumeClaim:
            claimName: stack-claim0
status: {}
