cockroach-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: cockroach
  name: cockroach
spec:
  ports:
    - name: "26257"
      port: 26257
      targetPort: 26257
    - name: "26256"
      port: 26256
      targetPort: 26256
  selector:
    io.kompose.service: cockroach
status:
  loadBalancer: {}
