stack-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: stack
  name: stack
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 1885
    - name: "443"
      port: 443
      targetPort: 8885
    - name: "1882"
      port: 1882
      targetPort: 1882
    - name: "8882"
      port: 8882
      targetPort: 8882
    - name: "1883"
      port: 1883
      targetPort: 1883
    - name: "8883"
      port: 8883
      targetPort: 8883
    - name: "1884"
      port: 1884
      targetPort: 1884
    - name: "8884"
      port: 8884
      targetPort: 8884
    - name: "1885"
      port: 1885
      targetPort: 1885
    - name: "8885"
      port: 8885
      targetPort: 8885
    - name: "1887"
      port: 1887
      targetPort: 1887
    - name: "8887"
      port: 8887
      targetPort: 8887
    - name: "1700"
      port: 1700
      protocol: UDP
      targetPort: 1700
  selector:
    io.kompose.service: stack
status:
  loadBalancer: {}
